Add what I learned from emails

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
         <title>
             Kevin's IBJ Projects
         </title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>Kevin's IBJ Projects</h1>
         <h2>August 6 - Campaign Monitor Youth Fundraiser Email</h2>
+        <h3>Email versions</h3>
         <ul>
             <li><a href="youth-fundraiser-email/v1-youth-fundraiser-email.html">Version 1</a>:
             This does not work for many Outlook applications because Outlook frickin' sucks.<br>
@@ -20,6 +22,19 @@
             <li><a href="youth-fundraiser-email/final-youth-fundraiser-email.html">Final</a>:
             The one that we sent out on Campaign Monitor to nearly 18,000 people.
             </li>
+        </ul>
+        <h3>Stuff I learned</h3>
+        <ul>
+            <li>Outlook is the worst.</li>
+            <li>Gmail and Outlook don't support negative margins.</li>
+            <li>Getting people to read your campaign emails is difficult.
+                <ul>
+                    <li>17,150 emails sent.</li>
+                    <li>Only 573, or 3%, of recipients clicked on a link.</li>
+                    <li>Of those 573 only 2 people, or 0.3%, donated.*<br>
+                    <span class="small">* These numbers are as of August 8, 2025.</span></li>
+                </ul>
+            <li>See support for HTML/CSS elements by email platform <a href="https://www.caniemail.com/" target="_blank" rel="noopener noreferrer">here</a>.</li>
         </ul>
     </body>
 </html>
