Edit directions to Florimont

--- a/index.html
+++ b/index.html
@@ -9,17 +9,22 @@
     </head>
     <body>
         <h1>Kevin's IBJ Projects</h1>
+        <h2>August 10 - Youth Fundraiser Directions</h2>
+        <ul>
+            <li><a href="youth-fundraiser/directions-en">English Directions</a></li>
+            <li><a href="youth-fundraiser/directions-fr">French Directions</a></li>  
+        </ul>
         <h2>August 6 - Campaign Monitor Youth Fundraiser Email</h2>
         <h3>Email versions</h3>
         <ul>
-            <li><a href="youth-fundraiser-email/v1-youth-fundraiser-email.html">Version 1</a>:
+            <li><a href="youth-fundraiser/v1-youth-fundraiser-email.html">Version 1</a>:
             This does not work for many Outlook applications because Outlook frickin' sucks.<br>
             I used divs, but Outlook disregards margin and padding for div elements.</li>
-            <li><a href="youth-fundraiser-email/v2-youth-fundraiser-email.html">Version 2</a>:
+            <li><a href="youth-fundraiser/v2-youth-fundraiser-email.html">Version 2</a>:
             This was my version of the flyer. I converted all the divs into tables (using Gemini).<br>
             Then I added some more details.
             </li>
-            <li><a href="youth-fundraiser-email/final-youth-fundraiser-email.html">Final</a>:
+            <li><a href="youth-fundraiser/final-youth-fundraiser-email.html">Final</a>:
             The one that we sent out on Campaign Monitor to nearly 18,000 people.
             </li>
         </ul>
