--- a/youth-fundraiser/directions-en.html
+++ b/youth-fundraiser/directions-en.html
@@ -20,25 +20,25 @@
         <p>(Note: This is the address for the stadium which is on the opposite side of the road as the school, so be sure to turn into the school and not the stadium)</p>
 
         <h3>Bird's eye view</h3>
-        <img src="directions-option1.jpg" alt="Image of directions for option 1." width="1000px" height="auto">
+        <img src="images/directions-option1.jpg" alt="Image of directions for option 1." width="1000px" height="auto">
         <br>
 
         <h3>Street view</h3>
         <p>The building that you shold walk to.</p>
-        <img src="directions-option1-door.jpg" alt="The door to Florimont" width="500px" height="auto">
+        <img src="images/directions-option1-door.jpg" alt="The door to Florimont" width="500px" height="auto">
 
         <h2>Option 2: Av. du Petit-Lancy</h2>
         <p>Address: <a href="https://maps.app.goo.gl/FDAdh8ciKjrSfwjaA" target="_blank" rel="noopener noreferrer">Av. du Petit-Lancy 37, 1213 Petit-Lancy</a></p>
 
 
         <h3>Bird's eye view</h3>
-        <img src="directions-option2.jpg" alt="Image of directions for option 2." width="1000px" height="auto">
+        <img src="images/directions-option2.jpg" alt="Image of directions for option 2." width="1000px" height="auto">
         
         <h3>Street view</h3>
         <p>The gate to Florimont.</p>
-        <img src="directions-option2-gate.jpeg" alt="The gate to Florimont" width="500px" height="auto">
+        <img src="images/directions-option2-gate.jpeg" alt="The gate to Florimont" width="500px" height="auto">
         <p>The door that you should walk through.</p>
-        <img src="directions-option2-door.jpg" alt="The door to Florimont" width="500px" height="auto">
+        <img src="images/directions-option2-door.jpg" alt="The door to Florimont" width="500px" height="auto">
     </div>
 </body>
 </html>
