--- a/youth-fundraiser/directions-fr.html
+++ b/youth-fundraiser/directions-fr.html
@@ -16,28 +16,28 @@
 
         <h2>Option 1 : Chem. du Bac</h1>
         <p>Cette option offre plus de places de parking et est plus proche de l'événement.</p>
-        <p>Adresse : <a href="https://maps.app.goo.gl/XdcNdct68GWvpujF9" target="_blank" rel="noopener noreferrer">Chem. du Bac 18, 1213 Lancy</a></p>
+        <p>Adresse : <a href="https://maps.app.goo.gl/XCih5dqpcCrYLzDT6" target="_blank" rel="noopener noreferrer">Chem. du Bac 18, 1213 Lancy</a></p>
         <p>(Attention : Il s'agit de l'adresse du stade qui se trouve de l'autre côté de la route par rapport à l'école, assurez-vous donc de tourner vers l'école et non vers le stade)</p>
 
         <h3>Vue aérienne</h3>
-        <img src="directions-option1.jpg" alt="Image des directions pour l'option 1." width="1000px" height="auto">
+        <img src="images/directions-option1.jpg" alt="Image des directions pour l'option 1." width="1000px" height="auto">
         <br>
 
         <h3>Vue de la rue</h3>
         <p>Le bâtiment vers lequel vous devez vous diriger.</p>
-        <img src="directions-option1-door.jpg" alt="La porte de Florimont" width="500px" height="auto">
+        <img src="images/directions-option1-door.jpg" alt="La porte de Florimont" width="500px" height="auto">
 
         <h2>Option 2 : Av. du Petit-Lancy</h2>
-        <p>Adresse : <a href="https://maps.app.goo.gl/FDAdh8ciKjrSfwjaA" target="_blank" rel="noopener noreferrer">Av. du Petit-Lancy 37, 1213 Petit-Lancy</a></p>
+        <p>Adresse : <a href="https://maps.app.goo.gl/c1kZJYrGsEeiuAom6" target="_blank" rel="noopener noreferrer">Av. du Petit-Lancy 37, 1213 Petit-Lancy</a></p>
 
 
         <h3>Vue aérienne</h3>
-        <img src="directions-option2.jpg" alt="Image des directions pour l'option 2." width="1000px" height="auto">
+        <img src="images/directions-option2.jpg" alt="Image des directions pour l'option 2." width="1000px" height="auto">
         
         <h3>Vue de la rue</h3>
         <p>Le portail de Florimont.</p>
-        <img src="directions-option2-gate.jpeg" alt="Le portail de Florimont" width="500px" height="auto">
+        <img src="images/directions-option2-gate.jpeg" alt="Le portail de Florimont" width="500px" height="auto">
         <p>La porte par laquelle vous devez entrer.</p>
-        <img src="directions-option2-door.jpg" alt="La porte de Florimont" width="500px" height="auto">
+        <img src="images/directions-option2-door.jpg" alt="La porte de Florimont" width="500px" height="auto">
     </div>
 </body>
