Fix img resize with viewport and add French imgs

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <h1>Kevin's IBJ Projects</h1>
         <h2>August 10 - Youth Fundraiser Directions</h2>
         <ul>
-            <li><a href="youth-fundraiser/directions-en">English Directions</a></li>
-            <li><a href="youth-fundraiser/directions-fr">French Directions</a></li>  
+            <li><a href="youth-fundraiser/directions-en.html">English Directions</a></li>
+            <li><a href="youth-fundraiser/directions-fr.html">French Directions</a></li>  
         </ul>
         <h2>August 6 - Campaign Monitor Youth Fundraiser Email</h2>
         <h3>Email versions</h3>
