Edit French directions for translation error

--- a/youth-fundraiser/directions-fr.html
+++ b/youth-fundraiser/directions-fr.html
@@ -17,7 +17,7 @@
         <h2>Option 1 : Chem. du Bac</h1>
         <p>Cette option offre plus de places de parking et est plus proche de l'événement.</p>
         <p>Adresse : <a href="https://maps.app.goo.gl/XCih5dqpcCrYLzDT6" target="_blank" rel="noopener noreferrer">Chem. du Bac 18, 1213 Lancy</a></p>
-        <p>(Attention : Il s'agit de l'adresse du stade qui se trouve de l'autre côté de la route par rapport à l'école, assurez-vous donc de tourner vers l'école et non vers le stade)</p>
+        <p>(Attention : Celle-ci est l'adresse du stade situé à l'autre côté de la route par rapport à l’école — assurez-vous donc de tourner vers l’école et non vers le stade.)</p>
 
         <h3>Vue aérienne</h3>
         <img src="images/directions-option1-fr.jpg" alt="Image des directions pour l'option 1." width="1000px" height="auto">
